# hello_cpp

./: CMakeLists.txt  LICENSE  README.md
include/: hello.hpp
src/: hello.cpp  main.cpp
